# aiogram3_telegram_bot

./: .gitignore  Makefile  README.md  __main__.py  alembic.ini  pyproject.toml
bot/: __main__.py  config.py
bot/commands/: __init__.py  bot_commands.py  help.py  settings.py  start.py
bot/db/: __init__.py  engine.py  mixins.py  user.py
bot/db/migrations/: env.py
bot/db/migrations/versions/: 2023-04-21_initial_migration.py
bot/handlers/: __init__.py
bot/handlers/commands/: __init__.py  base_commands.py  commands_list.py  settings_commands.py
bot/middlewares/: user_middleware.py
