[tool.poetry]
name = "aiogram3-pr-bot"
version = "0.1.0dev"
description = ""
authors = ["dogekiller21 <dogekiller21@gmail.com>"]
readme = "README.md"
packages = [{include = "aiogram3_pr_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "3.0b7"
sqlalchemy = "^2.0.9"
asyncpg = "^0.27.0"

[tool.poetry.group.dev.dependencies]
aiogram = "3.0b7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
